Updated unit tests to JUnit5.